--- a/Dia_92_16junio.Rmd
+++ b/Dia_92_16junio.Rmd
@@ -1,3 +1,14 @@
+---
+title: "Dia_92_16junio"
+author: "Daniel Felipe Villa Rengifo"
+date: "17/6/2021"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
 ```{r, eval=FALSE, include=TRUE}
 "Protocolo:
  
@@ -167,3 +178,14 @@ dev.off()
 
 sink()
 ```
+
+```{r, eval=FALSE, include=FALSE}
+library(knitr)
+purl("Dia_92_16junio.Rmd", "main.r")
+```
+
+
+
+
+
+
